# FontRenderer

./: CMakeLists.txt  CONTRIBUTORS  README  README-WINDOWS  fontrenderer.1
examples/: .gitignore  de-bello-gallico-liberI
src/: CMakeLists.txt  fontrenderer.cpp  line.cpp  line.h  primitive.cpp  primitive.h  renderer.cpp  renderer.h  vector.cpp  vector.h
src/primitives/: bezier.cpp  bezier.h  segment.cpp  segment.h
src/util/: tostring.h
