CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(FONTRENDERER CXX)

SET(PACKAGE_STRING fontrenderer)
SET(PACKAGE_BUGREPORT dominik@kaaser.at)
SET(PACKAGE_VERSION 1.0)

ADD_SUBDIRECTORY(src)

FIND_PACKAGE(Freetype REQUIRED)

INCLUDE_DIRECTORIES(${FREETYPE_INCLUDE_DIRS})

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)

ADD_EXECUTABLE(fontrenderer src/fontrenderer.cpp)

TARGET_LINK_LIBRARIES(fontrenderer frlib freetype)

